Add unit tests do Sled